--- a/css/main.css
+++ b/css/main.css
@@ -224,7 +224,7 @@ body{
     border-radius: 15px;
 }
 
-                        
+
 .services__list__bottom{
     display: flex;
     list-style: none;
@@ -526,3 +526,185 @@ body{
     border-radius: 50%;
     background: #717CFF;
 }
+
+
+.changes{
+    background-color: #FAFAFA;
+}
+
+.changes__info{
+    width: 969px;
+    margin-bottom: 77px;
+}
+
+.changes__list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.changes__list__item{
+    width: 348px;
+    list-style: none;
+    
+}
+
+
+.changes__box{
+    width: 348px;
+}
+
+.changes__heading{
+    margin-top: 27px;
+    margin-bottom: 11px;
+    font-weight: 900;
+    font-size: 25px;
+    line-height: 29px;
+    color: #37474F;
+}
+
+.changes__description{
+    font-size: 16px;
+    line-height: 27px;
+    color: #37474fb8;
+}
+
+.changes__dots{
+    margin-top: 83px;
+    padding-bottom: 136px;
+}
+
+
+.testimonial__list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style: none;
+}
+
+.testimonial__list__item{
+    width: 503px;
+    padding-top: 39px;
+    padding-right: 34px;
+    padding-bottom: 46px;
+    padding-left: 34px;
+    font-size: 18px;
+    line-height: 31px;
+    color: rgba(55, 71, 79, 0.721569);
+}
+
+.testimonial__box{
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.testimonial__content{
+    margin-left: 28px;
+    margin-top: 5px;
+}
+
+.testimonial__content__heading{
+    font-weight: 900;
+    font-size: 22px;
+    line-height: 26px;
+    color: #37474F;
+    margin-bottom: 4px;
+}
+
+.testimonial__content__parag{
+    font-size: 18px;
+    line-height: 21px;
+    color: #37474F;
+    mix-blend-mode: normal;
+    opacity: 0.65;
+}
+
+.testimonial__description{
+    font-size: 18px;
+    line-height: 31px;
+    color: #37474fb8;
+}
+
+.article{
+    background-color: #FAFAFA;
+}
+
+.article__info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.article__info__heading{
+    padding-top: 92px;
+    padding-bottom: 85px;
+    font-weight: 700;
+    font-size: 37px;
+    line-height: 43px;
+    color: #252525;
+}
+
+.article__button{
+    margin-top: 92px;
+}
+
+
+.footer{
+    background-color: #717CFF;
+}
+
+.footer__box{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer__info{
+    margin-right: 130px;
+    padding-top: 64px;
+    padding-bottom: 45px;
+}
+
+.footer__heading{
+    margin-top: 26px;
+    margin-bottom: 58px;
+    width: 343px;
+    font-size: 18px;
+    line-height: 32px;
+    color: #EEEEEE;
+}
+
+.footer__description{
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 32px;
+    color: #EEEEEE;
+}
+
+.footer__list{
+    display: block;
+    align-items: center;
+    list-style: none;
+}
+
+
+
+.footer__list__item > a{
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 49px;
+    color: #EEEEEE;
+}
+
+.footer__network{
+    display: flex;
+    align-items: center;
+    list-style: none;
+}
+
+.footer__network__item{
+    margin-top: 140px;
+    margin-right: 28px;
+}
+
