--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,38 @@
+/* roboto-regular - latin */
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     src: local(''),
-         url('../fonts/roboto-v30-latin-regular.woff2') format('woff2'), 
-         url('../fonts/roboto-v30-latin-regular.woff') format('woff'); 
+         url('../fonts/roboto-v30-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/roboto-v30-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
+  /* roboto-500 - latin */
   @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     src: local(''),
-         url('../fonts/roboto-v30-latin-500.woff2') format('woff2'),
-         url('../fonts/roboto-v30-latin-500.woff') format('woff'); 
+         url('../fonts/roboto-v30-latin-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/roboto-v30-latin-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
+  /* roboto-700 - latin */
   @font-face {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     src: local(''),
-         url('../fonts/roboto-v30-latin-700.woff2') format('woff2'),
-         url('../fonts/roboto-v30-latin-700.woff') format('woff');
+         url('../fonts/roboto-v30-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/roboto-v30-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* roboto-900 - latin */
+  @font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 900;
+    src: local(''),
+         url('../fonts/roboto-v30-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/roboto-v30-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
   }
 
 
@@ -107,7 +119,7 @@ body{
 .hero__info::after{
     position: absolute;
     content: "";
-    background: url(../Images/hero-image.jpg) no-repeat;
+    background: url(../Images/hero-image.png) no-repeat;
     width: 570px;
     height: 565px;
     top: 0;
